--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@ limitations under the License.
  
    <groupId>com.alexanderperucci</groupId>
    <artifactId>spring-grow</artifactId>
-   <version>1.0.0</version>
+   <version>1.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
 
    <name>spring-grow</name>
