--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -84,7 +84,7 @@
       <slf4j-log4j12.version>1.7.12</slf4j-log4j12.version>
       <junit.version>4.12</junit.version>
       <commons-dbcp2.version>2.1.1</commons-dbcp2.version>
-      <commons-collections.version>3.2.2</commons-collections.version>
+      <commons-collections4.version>4.1</commons-collections4.version>
       <commons-codec.version>1.10</commons-codec.version>
       <commons-fileupload.version>1.3.2</commons-fileupload.version>
       <jackson-databind.version>2.8.5</jackson-databind.version>
@@ -233,13 +233,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
-      <!-- Apache Commons Collections seek to build upon the JDK classes by 
-         providing new interfaces, implementations and utilities
-         https://mvnrepository.com/artifact/commons-collections/commons-collections -->
+      <!-- Apache Commons Collections package contains types that extend and
+           augment the Java Collections Framework
+         https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
       <dependency>
-         <groupId>commons-collections</groupId>
-         <artifactId>commons-collections</artifactId>
-         <version>${commons-collections.version}</version>
+         <groupId>org.apache.commons</groupId>
+         <artifactId>commons-collections4</artifactId>
+         <version>${commons-collections4.version}</version>
       </dependency>            
       <!-- Apache Commons Codec package contains simple encoder and decoders 
          for various formats such as Base64 and Hexadecimal. In addition to these 
