--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,7 @@ distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+--><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
  
    <groupId>com.alexanderperucci</groupId>
@@ -146,27 +145,226 @@ limitations under the License.
       </plugins>
    </reporting>
 
+   <dependencies>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>${springframework-security.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>${springframework.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>${slf4j-log4j12.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>${mysql-connector.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>${hibernate.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tiles</groupId>
+      <artifactId>tiles-servlet</artifactId>
+      <version>${org.apache.tiles}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>webjars-locator</artifactId>
+      <version>${webjars-locator.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>${javax.servlet.jstl.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>${commons-fileupload.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+      <version>${springframework-security.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate.javax.persistence</groupId>
+      <artifactId>hibernate-jpa-2.1-api</artifactId>
+      <version>${hibernate-jpa.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars.bower</groupId>
+      <artifactId>gentelella</artifactId>
+      <version>${webjars-gentelella.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet.jsp</groupId>
+      <artifactId>javax.servlet.jsp-api</artifactId>
+      <version>${javax.servlet.jsp.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>${springframework-security.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>${commons-collections4.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tiles</groupId>
+      <artifactId>tiles-jsp</artifactId>
+      <version>${org.apache.tiles}</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>${commons-codec.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson-databind.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-taglibs</artifactId>
+      <version>${springframework-security.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate.common</groupId>
+      <artifactId>hibernate-commons-annotations</artifactId>
+      <version>${hibernate-commons-annotations.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>${springframework.version}</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>commons-logging</artifactId>
+          <groupId>commons-logging</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>${springframework.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>${hibernate.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.imgscalr</groupId>
+      <artifactId>imgscalr-lib</artifactId>
+      <version>${imgscalr-lib.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-orm</artifactId>
+      <version>${springframework.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>${javax.servlet.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
+      <version>${commons-dbcp2.version}</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>commons-logging</artifactId>
+          <groupId>commons-logging</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>xml-apis</artifactId>
+          <groupId>xml-apis</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
    <properties>
       <!-- project -->
       <maven.compiler.source>1.8</maven.compiler.source>
       <maven.compiler.target>1.8</maven.compiler.target>
+      <apache-tomcat.dir.name>apache-tomcat-${apache-tomcat.version}</apache-tomcat.dir.name>
+      <javax.servlet.jstl.version>1.2</javax.servlet.jstl.version>
+      <org.apache.tiles>3.0.7</org.apache.tiles>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <junit.version>4.12</junit.version>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+      <jackson-databind.version>2.8.5</jackson-databind.version>
       <!-- plugins -->
       <maven-resources-plugin.version>3.0.2</maven-resources-plugin.version>
       <apache-rat-plugin.version>0.12</apache-rat-plugin.version>
+      <slf4j-log4j12.version>1.7.12</slf4j-log4j12.version>
+      <cargo.logging>low</cargo.logging>
+      <maven-war-plugin.version>3.0.0</maven-war-plugin.version>
       <maven-invoker-plugin.version>2.0.0</maven-invoker-plugin.version>
+      <apache-tomcat.version>8.5.8</apache-tomcat.version>
       <maven-site-plugin.version>3.6</maven-site-plugin.version>
+      <cargo.servlet.port>8090</cargo.servlet.port>
+      <hibernate-jpa.version>1.0.0.Final</hibernate-jpa.version>
       <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+      <hibernate-commons-annotations.version>4.0.5.Final</hibernate-commons-annotations.version>
+      <commons-dbcp2.version>2.1.1</commons-dbcp2.version>
+      <springframework-security.version>3.2.5.RELEASE</springframework-security.version>
+      <commons-fileupload.version>1.3.2</commons-fileupload.version>
+      <apache-tomcat.users.password>tomcat</apache-tomcat.users.password>
       <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
       <maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
+      <webjars-gentelella.version>1.3.0</webjars-gentelella.version>
+      <javax.servlet.version>3.1.0</javax.servlet.version>
       <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
       <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
       <maven-scm-publish-plugin.version>1.1</maven-scm-publish-plugin.version>
       <maven-project-info-reports-plugin.version>2.9</maven-project-info-reports-plugin.version>
+      <apache-tomcat.users.name>tomcat</apache-tomcat.users.name>
+      <mysql-connector.version>5.1.40</mysql-connector.version>
+      <imgscalr-lib.version>4.2</imgscalr-lib.version>
+      <maven-dependency-plugin.version>3.0.0</maven-dependency-plugin.version>
       <maven-changes-plugin.version>2.12.1</maven-changes-plugin.version>
+      <hibernate.version>4.3.11.Final</hibernate.version>
+      <commons-codec.version>1.10</commons-codec.version>
+      <springframework.version>4.2.8.RELEASE</springframework.version>
+      <cargo-maven2-plugin.version>1.6.3</cargo-maven2-plugin.version>
       <!-- dependencies -->
       <doxia-module-markdown.version>1.7</doxia-module-markdown.version>
+      <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
+      <cargo.rmi.port>9805</cargo.rmi.port>
+      <cargo.tomcat.ajp.port>9889</cargo.tomcat.ajp.port>
+      <slf4j.version>1.7.12</slf4j.version>
+      <commons-collections4.version>4.1</commons-collections4.version>
+      <apache-tomcat.server.port>8090</apache-tomcat.server.port>
+      <webjars-locator.version>0.32</webjars-locator.version>
+      <javax.servlet.jsp.version>2.3.1</javax.servlet.jsp.version>
    </properties>
 
    <build>
@@ -316,6 +514,38 @@ limitations under the License.
                <tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>
             </configuration>
          </plugin>
+         <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven-compiler-plugin.version}</version>
+        <configuration>
+          <source>${maven.compiler.source}</source>
+          <target>${maven.compiler.target}</target>
+          <showWarnings>true</showWarnings>
+          <showDeprecation>true</showDeprecation>
+          <compilerArgument>-Xlint:unchecked</compilerArgument>
+        </configuration>
+      </plugin>
+         <plugin>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>${maven-javadoc-plugin.version}</version>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+         <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>${maven-war-plugin.version}</version>
+        <configuration>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
+          <webappDirectory>${project.build.directory}/webapp</webappDirectory>
+          <warName>${project.artifactId}</warName>
+        </configuration>
+      </plugin>
       </plugins>
    </build>
 
@@ -388,5 +618,168 @@ limitations under the License.
             </plugins>
          </build>
       </profile>
+      <profile>
+      <id>build-tomcat</id>
+      <activation />
+      <build>
+        <defaultGoal>clean verify</defaultGoal>
+        <plugins>
+          <plugin>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>${maven-dependency-plugin.version}</version>
+            <executions>
+              <execution>
+                <id>download-tomcat</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>unpack</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>org.apache.tomcat</groupId>
+                      <artifactId>tomcat</artifactId>
+                      <version>${apache-tomcat.version}</version>
+                      <type>zip</type>
+                      <overWrite>true</overWrite>
+                      <outputDirectory>${project.build.directory}</outputDirectory>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+              <execution>
+                <id>download-mysql-connector</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>copy</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>mysql</groupId>
+                      <artifactId>mysql-connector-java</artifactId>
+                      <type>jar</type>
+                      <overWrite>true</overWrite>
+                      <outputDirectory>${project.build.directory}/${apache-tomcat.dir.name}/lib</outputDirectory>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <artifactId>maven-resources-plugin</artifactId>
+            <version>${maven-resources-plugin.version}</version>
+            <executions>
+              <execution>
+                <id>copy-server.xml</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>copy-resources</goal>
+                </goals>
+                <configuration>
+                  <outputDirectory>${project.build.directory}/${apache-tomcat.dir.name}/conf</outputDirectory>
+                  <resources>
+                    <resource>
+                      <filtering>true</filtering>
+                      <directory>src/main/assembly/resources</directory>
+                      <includes>
+                        <include>server.xml</include>
+                      </includes>
+                    </resource>
+                  </resources>
+                </configuration>
+              </execution>
+              <execution>
+                <id>copy-tomcat-users.xml</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>copy-resources</goal>
+                </goals>
+                <configuration>
+                  <outputDirectory>${project.build.directory}/${apache-tomcat.dir.name}/conf</outputDirectory>
+                  <resources>
+                    <resource>
+                      <filtering>true</filtering>
+                      <directory>src/main/assembly/resources</directory>
+                      <includes>
+                        <include>tomcat-users.xml</include>
+                      </includes>
+                    </resource>
+                  </resources>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>single</goal>
+                </goals>
+                <configuration>
+                  <appendAssemblyId>false</appendAssemblyId>
+                  <descriptors>
+                    <descriptor>src/main/assembly/build-tomcat.xml</descriptor>
+                  </descriptors>
+                </configuration>
+              </execution>
+            </executions>
+            <inherited>true</inherited>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+      <profile>
+      <id>embedded</id>
+      <activation />
+      <build>
+        <defaultGoal>clean verify cargo:run</defaultGoal>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.cargo</groupId>
+            <artifactId>cargo-maven2-plugin</artifactId>
+            <version>${cargo-maven2-plugin.version}</version>
+            <configuration>
+              <container>
+                <containerId>tomcat8x</containerId>
+                <artifactInstaller>
+                  <groupId>org.apache.tomcat</groupId>
+                  <artifactId>tomcat</artifactId>
+                  <version>${apache-tomcat.version}</version>
+                </artifactInstaller>
+                <dependencies>
+                  <dependency>
+                    <groupId>mysql</groupId>
+                    <artifactId>mysql-connector-java</artifactId>
+                  </dependency>
+                </dependencies>
+              </container>
+              <configuration>
+                <type>standalone</type>
+                <properties>
+                  <cargo.servlet.port>${cargo.servlet.port}</cargo.servlet.port>
+                  <cargo.tomcat.ajp.port>${cargo.tomcat.ajp.port}</cargo.tomcat.ajp.port>
+                  <cargo.rmi.port>${cargo.rmi.port}</cargo.rmi.port>
+                  <cargo.logging>${cargo.logging}</cargo.logging>
+                  <cargo.jvmargs>-noverify -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC</cargo.jvmargs>
+                </properties>
+              </configuration>
+              <deployables>
+                <deployable>
+                  <location>${project.build.directory}/${project.artifactId}.war</location>
+                  <type>war</type>
+                  <properties>
+                    <context>/${project.artifactId}</context>
+                  </properties>
+                </deployable>
+              </deployables>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
    </profiles>
 </project>
